syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Auth.Database.Gen";

service AuthDatabase {
  rpc Registration (RegistrationPlayerRequest) returns (RegistrationPlayerResponse);
}

message RegistrationPlayerRequest {
  int32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  optional google.protobuf.Timestamp deleted_at = 4;
  string email = 5;
  string password = 6;
  string nickname = 7;
  bool confirmed = 8;
  bool blocked = 9;
  int32 role = 10;
  google.protobuf.Timestamp last_login = 11;
  int32 avatar_id = 12;
  int32 frame_id = 13;
  int32 games = 14;
  int32 wins = 15;
  int32 loses = 16;
  int32 mmr = 17;
  int32 rank = 18;
  bool premium = 19;
  int32 gold = 20;
  int32 level = 21;
  int32 experience = 22;
}

message RegistrationPlayerResponse {
  int32 id = 1;
}